# oxide-wdns

./: .cursorrules  .gitignore  Cargo.toml  Dockerfile  Dockerfile-arm64  LICENSE  Makefile  README.md  README_CN.md  config.default.yaml  config.routing.yaml  demo.go
.cargo/: config.toml
.github/workflows/: docker-build.yml  release.yml
design/: client.md  server.md
examples/client/go/: demo.go  go.mod
examples/client/java/: demo.java  pom.xml
examples/client/javascript/: demo.js
examples/client/python/: demo.py
examples/client/shell/: demo.sh
examples/kubernetes/: configmap.yaml  deloyment.yaml  service.yaml
examples/linux/systemd/: owdns.service
src/: lib.rs
src/client/: args.rs  core.rs  error.rs  mod.rs  request.rs  response.rs
src/common/: consts.rs  error.rs  mod.rs
src/server/: args.rs  cache.rs  config.rs  doh_handler.rs  ecs.rs  error.rs  health.rs  metrics.rs  mod.rs  routing.rs  scalar.rs  security.rs  signal.rs  swagger.rs  upstream.rs
tests/: client_tests.rs  dnssec_test.rs  doh_api_tests.rs  doh_upstream_test.rs  rate_limit_tests.rs
tests/client/: args_tests.rs  cli_integration_tests.rs  core_tests.rs  error_tests.rs  mod.rs  request_tests.rs  response_tests.rs
tests/server/: TODO.md  args_tests.rs  cache_tests.rs  config_tests.rs  demo.rs  doh_handler_advanced_tests.rs  ecs_tests.rs  health_tests.rs  metrics_tests.rs  mock_http_server.rs  mod.rs  routing_tests.rs  security_advanced_tests.rs  server_integration_tests.rs  signal_tests.rs  upstream_tests.rs
