[package]
name = "oxide-wdns"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false
overflow-checks = false

[[bin]]
name = "owdns"
path = "src/bin/owdns.rs"

[[bin]]
name = "owdns-cli"
path = "src/bin/owdns_cli.rs"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
axum = "0.7"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
hyper = { version = "1.4", features = ["http1", "http2"] }
tower = "0.4"

# 以下依赖已经从注释变为实际依赖，需要统一版本格式
trust-dns-proto = "0.23"
trust-dns-resolver = { version = "0.23", features = ["dns-over-https", "dns-over-tls", "dnssec-openssl", "tokio-runtime"] }
moka = { version = "0.12", features = ["future"] }
prometheus = "0.13"
tower_governor = "0.7"
mimalloc = { version = "0.1", default-features = false }
thiserror = "1.0"
fastrand = "2.0"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] } # For integration tests
